--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
   "react": "18.2.0",
   
     
-  "react-dom": "18.2.0"
+  "react-dom": "18.2.0",
+  
+    
+  "react-infinite-scroll-component": "^6.1.0"
   
   }
 }
