--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
   "next": "13.4.4",
   
     
+  "next-auth": "^4.22.1",
+  
+    
+  "nookies": "^2.5.2",
+  
+    
   "react": "18.2.0",
   
     
